# foobar_lyrics

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: lrc_parser.h  lyric_manager.h  lyric_search_task.cpp  lyric_search_task.h  lyric_source.h  lyrics_panel.cpp  lyrics_panel.h  main.cpp  sources.cpp  sources.h
